<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <Button
        android:id="@+id/hour_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:onClick="viewByHour"
        android:text="@string/hour_stats" />

    <Button
        android:id="@+id/day_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/hour_button"
        android:layout_marginTop="66dp"
        android:onClick="viewByDay"
        android:text="@string/day_stats" />

    <Button
        android:id="@+id/week_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/day_button"
        android:layout_marginTop="58dp"
        android:onClick="viewByWeek"
        android:text="@string/week_stats" />

    <Button
        android:id="@+id/month_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/week_button"
        android:layout_marginTop="44dp"
        android:onClick="viewByMonth"
        android:text="@string/month_stats" />

</RelativeLayout>
