<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
    android:id="@+id/CreateCounter_container">

    <EditText
        android:id="@+id/counter_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/textView1"
        android:ems="10"
        android:inputType="textCapSentences" />

    <Button
        android:id="@+id/create_button"
        android:layout_width="166dp"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/counter_name"
        android:onClick="create"
        android:text="@string/create_new_counter" />

    <Button
        android:id="@+id/cancel_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/create_button"
        android:layout_alignBottom="@+id/create_button"
        android:layout_alignParentLeft="true"
        android:layout_toLeftOf="@+id/create_button"
        android:onClick="cancel"
        android:text="@string/cancel_button" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/enter_counter_name"
        android:textAppearance="?android:attr/textAppearanceLarge" />

</RelativeLayout>